@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX autoconf-mktime-2.59.patch 4686 RMD160 64f719df39ae0a17999cb6b87ce9c5e275fcd7eb SHA1 4355b22b415c703c8ca9cc1b7b89ec44edc7ad4c SHA256 3c16de6cbe24fc806c29390eaf4c7e1d9ceda3df523bb18941cf0a3184356bba
 AUX bash-3.0-configs-prefix.patch 2083 RMD160 417945d47d8fdd382f5e0b47c9e8280c64325002 SHA1 2e6d1c5ab5b16346c85641358c9bf1d890f916e9 SHA256 f0045a91ad18e8c8a9355028f3e43486f19cccd5b05fda42e85362fa50d076d8
 AUX bash-3.0-configs.patch 2538 RMD160 00e8015531efb6a59298782581928f1aff2247e6 SHA1 7f4615de4ac2219372d34dfbead3311fcfdfab2a SHA256 09d11c8e6158b2346fc39830d75af2210cd1cec7c8e9965aed96b66213310d3f
@@ -120,11 +123,18 @@ DIST bash42-026 1577 RMD160 32dd5da47a149bc9369272e1e792c35e9d4a84c4 SHA1 d976cd
 DIST bash42-027 1461 RMD160 bb7546341f7c65b016cf20d164f5ebf69107c8f0 SHA1 baad3c5f1f3c20c96bf7cd6cf932b4e8abc1f0c5 SHA256 0c1f6b7256fcc17f42c05f9bbb4138f8e8bb67e79c622c3485711b6f37f7ed42
 DIST bash42-028 1834 RMD160 71071124dd5124341bd01f8c10d577d477a731a9 SHA1 c63104992b8f95ef966dc8604f89b0bc595d0d08 SHA256 204226de39ba81aaf3dd5a29cd59de052ec9f648538bb9e7f1c8150852b1ed7a
 EBUILD bash-4.0_p38.ebuild 7873 RMD160 9055f81bb5739d9436810f590a82038be1e58038 SHA1 b2eb20cc2804521d8653dea09699c046dfb5a0de SHA256 8ef8e97f7e078bfc8b46873cd6b42be4d21ad82f6f26473732224505f1ad3d0c
-EBUILD bash-4.1_p10.ebuild 7996 RMD160 2bb2233255d427833ae0bafe76cc304076a4ac1f SHA1 76e5ea15afd9db186d4d0f146db82239a784191d SHA256 3511df11f765dfb213b31b5e87528c9b7857ed1d5dab48d390ac1b2e68f2aabe
-EBUILD bash-4.1_p11.ebuild 7996 RMD160 f6d12d55574f70dd73566040575b9dc4b42efc04 SHA1 9eb78526a6bfbae77dd9702f702b45018eac8405 SHA256 54805a192ed038496d68262a5556e1bfe1ec7043e39237c10780a404904a4970
-EBUILD bash-4.1_p7.ebuild 7995 RMD160 b1139c2b05550fb6ffcfdaefe996f53c4c416544 SHA1 1d7fe2602104205affc2591de75dd71d9148a3ab SHA256 228ba08baddf81d0abfe63530bc0e92aff4d353446e93343fd24ab142cb2effe
-EBUILD bash-4.2_p10.ebuild 8272 RMD160 32071f8d01cb8533b605cb7481f63981ba9586f5 SHA1 17e6683ea443da0822d91f5859a7ca0da2831f34 SHA256 bd54d54dbd7465a2bc230e56f955770706dbc3b771f676c0519a50707791b639
-EBUILD bash-4.2_p20.ebuild 8645 RMD160 e308d0d2757b52efcdc9d2a4788366217ff370aa SHA1 52fe23a53627721fc14a1e51539c53e84a0f7275 SHA256 d36548739614f61dbfa34519c6917b3a5b4a1acd0f63c2d8020c304944a2d8e8
-EBUILD bash-4.2_p28.ebuild 8819 RMD160 76f87befdd2c09d26a6110385c557de267f9e53f SHA1 7f0ad7da1ea9298bc50c88f2c61e900cdc05988e SHA256 5dbc2bd45c9e18c2071cf023b1ca36048d4546cdd24ad3cddbf149d6e1e97fd0
-MISC ChangeLog 47791 RMD160 dc6746b6e895ba351d435e7e49cf72a94e7f8ddb SHA1 8fb16c017671475ce791af884280a7ea14a14bec SHA256 045e0087709dff2be6024b9d4715868daec70293511543841268924080d43a1c
+EBUILD bash-4.1_p10.ebuild 8001 RMD160 ba3f284d0ff5162765f7e0f2d8733416256a8505 SHA1 071ca4866cd3d619f747d952715ebab7ca58deac SHA256 500a3b10c1df26362a10f712ca5cbe827d73ad6218718ef7f3e9555a79722f4e
+EBUILD bash-4.1_p11.ebuild 8001 RMD160 06b390ee3d3671c143392792469971c443c07de5 SHA1 8368f9322c77eb7acba7601b79e2b0a18df0c746 SHA256 508d36bac2b2a2490cc7e9bc79b9771cf68f65a000ed23d59d195dcd4dcde1f0
+EBUILD bash-4.1_p7.ebuild 8001 RMD160 362b85fa64ea2467bc698e39d9fe25ab5d333fc0 SHA1 9bb2ac73e8c19744d14bc9cc7e68b0ca57bcfc44 SHA256 d67550ae37e09caa405abe68b935bd4fc6c8a9a092d6ea1acf309b788e0a4f7a
+EBUILD bash-4.2_p10.ebuild 8275 RMD160 4634583f8307ca0d65ee6a0c372e3e07edabd25e SHA1 0ad8eab99a4a10dea699473267d4fffbc70ac1fb SHA256 da37e6d35b68ed3175801396fc12884ba50833e5134a76cc394f56dd6b9b6965
+EBUILD bash-4.2_p20.ebuild 8648 RMD160 6f4fdcbc4e4342ee39929df4d03d7d112c49ff71 SHA1 6fd63a7d5570bd674c57f917c4ebb5f296fe066e SHA256 7059ffcf159f1639f0afd916da7854ab97bc1cd06fc4443d61ee8b383a3d156c
+EBUILD bash-4.2_p28.ebuild 8822 RMD160 c4eb53a0a9170d0c48f5b3c618ea55e01985335e SHA1 df0a1dde84cb2872f9923c77642596cbc67e361d SHA256 9ff1059b9c17554ef8fbb30f12f14973e39216dc4b23b38fc3ee39b582231c4b
+MISC ChangeLog 48345 RMD160 2b9d7e31d421719030fd386dff288f151810b5f4 SHA1 a7a4fa989c5ee06c421229fdfba350076f137f0c SHA256 e9c78c2b9d279fbab27d5440c17b0b8347b72246a796f1ebdca0d0865f0cc25a
 MISC metadata.xml 568 RMD160 c778ff1669af3c368238bcf481b344b741f0d6e1 SHA1 8d74d1c518351ad8085c9c26a5f2554d8c768b20 SHA256 48d380acb97dda0a7f4bd918b208d11367a8367d289b0a2d78ef08ef9a4e2562
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk/CBlIACgkQX3X2B8XHTol+9wCeIFhxSuVCm1P9D1Walw2Ow/M5
++5QAoJukHlrPE8nclPVPtMunsIepmLJ9
+=j7Yp
+-----END PGP SIGNATURE-----
