@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/bash-4.1_p10.ebuild,v 1.2 2011/05/16 10:36:26 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/bash-4.1_p10.ebuild,v 1.3 2012/05/23 01:13:17 zmedico Exp $
 
 EAPI="1"
 
@@ -44,7 +44,7 @@ IUSE="afs bashlogger examples mem-scramble +net nls plugins vanilla"
 DEPEND=">=sys-libs/ncurses-5.2-r2
 	nls? ( virtual/libintl )"
 RDEPEND="${DEPEND}
-	!<sys-apps/portage-2.1.7.16
+	!<sys-apps/portage-2.1.6.7_p1
 	!<sys-apps/paludis-0.26.0_alpha5"
 
 S=${WORKDIR}/${MY_P}
